<resources>
    <string name="app_name">TestScreen2</string>
    <string name="message_placeholder">Enter a message</string>
    <string name="send_button">Send</string>
    <string name="count_init">0</string>
    <string name="random_heading">Here is a random number between 0 and %1d</string>
    <string name="toast_button">Toast</string>
    <string name="random_button">Random</string>
    <string name="count_button">Count</string>
    <string name="toast_message">Hello Toast!</string>
</resources>
